<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zz.ebuy.SignUp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_sign_up"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:paddingStart="@android:dimen/app_icon_size"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:layout_width="200sp"
                android:layout_height="45sp"
                android:id="@+id/sign_nickname"
                android:inputType="textEmailSubject"
                tools:ignore="LabelFor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:paddingStart="@android:dimen/app_icon_size"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:layout_width="200sp"
                android:layout_height="45sp"
                android:id="@+id/sign_username"
                android:inputType="textEmailSubject"
                tools:ignore="LabelFor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:paddingStart="@android:dimen/app_icon_size"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:layout_width="200sp"
                android:layout_height="45sp"
                android:id="@+id/sign_password"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_password"
                android:paddingStart="@android:dimen/app_icon_size"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:layout_width="200sp"
                android:layout_height="45sp"
                android:id="@+id/re_sign_password"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginTop="100dp">
            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:id="@+id/sign_yes"
                android:text="@string/sign_yes"
                android:background="@color/colorButton"
                style="?android:buttonBarButtonStyle"
                tools:ignore="NestedWeights" />
            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:id="@+id/sign_no"
                android:text="@string/sign_no"
                android:background="@color/colorButton"
                android:layout_marginTop="10dp"
                style="?android:buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
